<resources>
    <string name="app_name" translatable="false">ToDo</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="username_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="add_note">Add Note</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="status">Status</string>
    <string name="test">Test</string>
    <string name="birthday">Date of Birth</string>
    <string name="email">E-mail</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="preference_file_key" translatable="false">com.rowaida.todo.PREFERENCE_FILE_KEY</string>
    <string name="invalid_credentials">Incorrect login credentials</string>
    <string name="missing_fields">Please fill all fields</string>
    <string name="exist_credentials">Credentials already exist</string>
    <string name="cancel">cancel</string>
    <string name="save">save</string>
    <string name="update">update</string>
    <string name="myTasks">My Tasks</string>
    <string name="subAccountTasks">Sub Accounts Tasks</string>
    <string name="assignedTasks">Assigned Tasks</string>
    <string name="done">done</string>
    <string name="ok">ok</string>
    <string name="next">next</string>
    <string name="editNote">Edit Note</string>
    <string name="chooseUser">Choose User</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="missing_usernameOrEmail">Please enter your username or email</string>
    <string name="missing_password">Please enter your password</string>
    <string name="gender">Gender</string>
    <string name="assign">assign</string>
    <string name="enterNote">Enter Note</string>
    <string name="assignNote">Assign Note</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="tasks">Tasks: </string>
    <string name="select_date">Select date</string>
</resources>