<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".presentation.activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="vertical"
            tools:context=".presentation.activity.SignupActivity">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailError2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:background="#FFFFFF"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/usernameError2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                android:layout_marginTop="5dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ellipsize="end"
                    android:hint="@string/username"
                    android:inputType="textEmailAddress"
                    android:background="#FFFFFF"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passError2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintAnimationEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/password"
                    android:background="#FFFFFF"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/birthError2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:endIconDrawable="@android:drawable/ic_menu_my_calendar"
                app:endIconMode="custom"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/birthday"
                    android:inputType="date"
                    android:background="#FFFFFF"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingStart="5dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/male"
                    app:buttonTint="@color/teal_200" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    app:buttonTint="@color/teal_200" />

            </RadioGroup>

            <Button
                android:id="@+id/signup_button2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_margin="20dp"
                android:background="@color/teal_700"
                android:backgroundTint="@color/teal_700"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:backgroundTint="@color/teal_700" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

